feat: statistics api
